<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/fragSignUp_firstNameView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:autofillHints="@string/first_name_hint"
            android:ems="10"
            android:hint="@string/first_name_hint"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/fragSignUp_lastNameView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:autofillHints="@string/last_name_hint"
            android:ems="10"
            android:hint="@string/last_name_hint"
            android:inputType="textPersonName"
            android:layout_marginTop="8dp" />

        <EditText
            android:id="@+id/fragSignUp_emailView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:autofillHints="@string/email_hint"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:layout_marginTop="8dp" />

        <EditText
            android:id="@+id/fragSignUp_passwordView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:autofillHints="@string/password_hint"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:layout_marginTop="8dp" />

        <Button
            android:id="@+id/fragSignUp_SignUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/button_signup" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>